<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_edit_contacts">EditContactsActivity</string>
    <string name="mooteinfo">Ny Møte: </string>Type
    <string name="type">Type</string>
    <string name="sted">Sted</string>Sted
    <string name="leggtildeltakere">Legg til deltagere</string>
    <string name="leggtil">Legg til</string>
    <string name="leggtilkontakter">Legg til kontakter</string>
    <string name="kicon">Kicon</string>
    <string name="deleteicon">deleteicon</string>
    <string name="mooter">Møter</string>
    <string name="innstillinger">Innstillinger</string>
    <string name="kontakter">Kontakter</string>
    <string name="redigerMoote">Rediger Møte: </string>
    <string name="Rediger">Rediger</string>
    <string name="leggDeltakere">Legg til deltagere</string>
    <string name="tidspunkt">Tidspunkt</string>
    <string name="typeplaceholder">Type…</string>
    <string name="placeplaceholder">Sted…</string>
    <string name="logo">logo</string>
    <string name="antalllagttil">Antall lagt til: 0</string>
    <string name="redigerkontakt">Rediger kontakt</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_edit_meetings">EditMeetingsActivity</string>
    <string name="navn">Navn</string>
    <string name="telefon">Telefon</string>
    <string name="rediger">Rediger</string>
    <string name="legg_til_kontakt">Legg til kontakt</string>
    <string name="velg_alle">velg alle</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="set">Sett</string>
    <string name="cancel">Avbryt</string>
    <string name="title_activity_show_contacts">ShowContactsActivity</string>
    <string name="tilbake">tilbake</string>
    <string name="lagre">Lagre</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>