<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="90dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/mooteinfo"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/editMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"
            android:background="@color/blue"
            android:text="@string/lagre"
            android:textColor="@color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/innType"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/darkGrey" />

    <TextView
        android:id="@+id/feiltype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/innSted"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sted"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/darkGrey" />

    <TextView
        android:id="@+id/feilsted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:enabled="false"
        android:text="@string/tidspunkt"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGrey"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="50"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="1"
            android:scaleY="1" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:scaleX="1"
            android:scaleY="1"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/editList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="10"
            android:background="@color/blue"
            android:contentDescription="@string/leggtildeltakere"
            android:padding="5dp"
            android:src="@drawable/ic_addperson"
            android:text="@string/leggtildeltakere"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/antall"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="-20dp"
            android:layout_weight="70"
            android:autofillHints=""
            android:enabled="true"
            android:hint="@string/leggtilkontakter"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/feilKontaktListe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark" />


</LinearLayout>